fix fusehammer usage

--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@ usage: hammerread &lt;dev&gt;
 $ cd hammer-linux
 $ git checkout -b fuse-hammer origin/fuse-hammer
 $ make &amp;&amp; ./fusehammer
-usage: hammerread &lt;dev&gt;
+HAMMER filesystem for FUSE (readonly)
+Usage: ./fusehammer &lt;dev&gt; &lt;mount_point&gt; [&lt;FUSE library options&gt;]
 </pre></p>
 
     <h3>Misc</h3>
