--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
 	
     <h1><span class="small">Porting the HAMMER File System to Linux</span></h1>
 
+    <div align="center"><img src="hammerzeit.jpg" width="400" /></div>
+
    <p>As part of a student project, I attempted to port the
 	  <a href="http://www.dragonflybsd.org/hammer/">HAMMER File System</a> from
 	  DragonFly BSD to Linux. The file system port implements the VFS operations
